event resend to iframe, menu z-index dix, form sending prevented

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -519,7 +519,6 @@ object {
 	position: absolute;
 	bottom: 52px;
 	width: 100%;
-	z-index: 9999;
 }
 #site-title {
 	padding: 39px 0 0;
